@@ -49,6 +49,7 @@ requires.append(get_require_version('trytond'))
 
 tests_require = [get_require_version('proteus'),
     get_require_version('trytond_account_invoice_secondary_unit'),
+    get_require_version('trytond_purchase_amendment'),
     get_require_version('trytond_purchase_blanket_agreement'),
     get_require_version('trytond_purchase_request'),
     get_require_version('trytond_purchase_requisition'),
