@@ -14,6 +14,7 @@ Imports::
 Activate modules::
 
     >>> config = activate_modules([
+    ...         'purchase_amendment',
     ...         'purchase_secondary_unit',
     ...         'account_invoice_secondary_unit',
     ...         'stock_secondary_unit'])
@@ -136,3 +137,25 @@ Check secondary unit on move::
     2.0
     >>> move.secondary_unit_price
     Decimal('15.0000')
+
+Add an amendment::
+
+    >>> amendment = purchase.amendments.new()
+    >>> line = amendment.lines.new()
+    >>> line.action = 'line'
+    >>> line.line = purchase.lines[-1]
+    >>> line.quantity = 1
+    >>> line.unit = kg
+    >>> line.unit_price = Decimal('45.0000')
+    >>> amendment.click('validate_amendment')
+
+    >>> purchase.reload()
+    >>> line = purchase.lines[-1]
+    >>> line.quantity
+    5.0
+    >>> line.secondary_quantity
+    1.0
+    >>> line.unit_price
+    Decimal('9.0000')
+    >>> line.secondary_unit_price
+    Decimal('45.0000')
