@@ -8,6 +8,7 @@ depends:
     stock
 extras_depend:
     account_invoice_secondary_unit
+    purchase_amendment
     purchase_blanket_agreement
     purchase_requisition
     stock_secondary_unit
